Fix z-indices to stop logo overlapping content

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -50,7 +50,7 @@ body {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  z-index: 9999;
+  z-index: 0;
   cursor: pointer;
   display: flex;
   align-items: center;
